--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.22.0
-streamlit-option-menu==0.3.2
-PyPDF2==3.0.1
-scikit-learn==1.2.2
-numpy==1.24.3
-transformers==4.30.2
-torch==2.0.1
-groq==0.1.0
+streamlit-option-menu
+PyPDF2
+scikit-learn
+numpy
+transformers
+torch
+groq
+streamlit
